--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,7 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # React/Vite SPA deep‑link support
     location / {
         try_files $uri $uri/ /index.html;
     }
