--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest run --reporter=junit --outputFile=junit.xml"
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
@@ -28,6 +29,11 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "vitest": "^3.2.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/jest-dom": "^6.4.4",
+    "@types/jest": "^29.5.11",
+    "@vitest/junit-reporter": "^0.34.6"
   }
 }
