--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "vitest": "^3.2.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/jest-dom": "^6.4.4",
-    "@types/jest": "^29.5.11",
-    "@vitest/junit-reporter": "^0.34.6"
+    "@types/jest": "^29.5.11"
   }
 }
