--- a/buildspec-test.yml
+++ b/buildspec-test.yml
@@ -6,7 +6,7 @@ phases:
       nodejs: 20
     commands:
       - echo "Installing test dependencies..."
-      - npm ci
+      - npm install
 
   build:
     commands:
