--- a/buildspec-test.yml
+++ b/buildspec-test.yml
@@ -6,6 +6,7 @@ phases:
       nodejs: 20
     commands:
       - echo "Installing test dependencies..."
+      - npm install jsdom
       - npm install
 
   build:
